--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "ghru.com.ghru2"
+        applicationId "com.ghru"
         minSdkVersion 21
         targetSdkVersion 23
         versionCode 1
