--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.ghru">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.example.ghru">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
