Remove dead code

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.ghru"
+        applicationId "com.example.ghru"
         minSdkVersion 21
         targetSdkVersion 23
         versionCode 1
